# base64

./: --output.html  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION-1.0.md  README.md  base64.cabal  base64.html  bench.csv  cabal.haskell-ci  cabal.project  cabal.project.local  default.nix  output-1.html  output-2.html  output-3.html  output.html
.github/workflows/: haskell-ci.yml
bench/: Base64Bench.hs  base64.html
benchmarks/: Base64Bench.hs  PERFORMANCE.md  output-decode.html  output-encode.html  output.html
cbits/: base64.c  codecs.h  endian.c  genericBase64.c  table_dec_32bit.h  table_dec_32bit_std.h  table_enc_12bit.h  table_enc_12bit_std.c  table_enc_12bit_std.h  table_enc_12bit_url.c  table_enc_12bit_url.h  tables.c  tables.h
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ghc-byteorder-4.11.0.0.10/: LICENSE  ghc-byteorder.cabal
ghc-byteorder-4.11.0.0.10/src-test/: tests.hs
include/: env.h  genericBase64.h  table_dec_32bit_url.h  tables.h
src/Data/: Base64.hs
src/Data/Base64/: Internal.hs  Types.hs
src/Data/Base64/Types/: Internal.hs
src/Data/ByteString/: Base64.hs
src/Data/ByteString/Base64/: BSD.hs  Internal.hs  Lazy.hs  Lens.hs  URL.hs
src/Data/ByteString/Base64/Internal/: Head.hs  Tables.hs  Tail.hs  Types.hs  Utils.hs
src/Data/ByteString/Base64/Internal/W16/: Loop.hs  ShortLoop.hs
src/Data/ByteString/Base64/Internal/W32/: Decode.hs  Encode.hs  Loop.hs  ShortLoop.hs
src/Data/ByteString/Base64/Internal/W64/: Encode.hs  Loop.hs  ShortLoop.hs
src/Data/ByteString/Base64/Internal/W8/: Encode.hs  Loop.hs
src/Data/ByteString/Base64/URL/: Lazy.hs
src/Data/ByteString/Lazy/: Base64.hs
src/Data/ByteString/Lazy/Base64/: URL.hs
src/Data/ByteString/Short/: Base64.hs
src/Data/ByteString/Short/Base64/: URL.hs
src/Data/Text/Encoding/: Base64.hs
src/Data/Text/Encoding/Base64/: Error.hs  Lazy.hs  Lens.hs  URL.hs
src/Data/Text/Encoding/Base64/URL/: Lazy.hs
src/Data/Text/Lazy/: Base64.hs
src/Data/Text/Lazy/Base64/: URL.hs
src/Data/Text/Lazy/Encoding/: Base64.hs
src/Data/Text/Lazy/Encoding/Base64/: URL.hs
src/Data/Text/Short/Encoding/: Base64.hs
src/Data/Text/Short/Encoding/Base64/: URL.hs
temp/base64-0.0.1.0-docs/: Data-ByteString-Base64-Lens.html  Data-ByteString-Base64-URL.html  Data-ByteString-Base64.html  Data-Text-Encoding-Base64-Lens.html  Data-Text-Encoding-Base64-URL.html  Data-Text-Encoding-Base64.html  base64.haddock  base64.txt  doc-index.html  doc-index.json
temp/base64-0.0.1.0-docs/src/: Data.ByteString.Base64.Internal.html  Data.ByteString.Base64.Lens.html  Data.ByteString.Base64.URL.html  Data.ByteString.Base64.html  Data.Text.Encoding.Base64.Lens.html  Data.Text.Encoding.Base64.URL.html  Data.Text.Encoding.Base64.html
test/: Base64Tests.hs  Internal.hs  Main.hs
