cabal-version:   2.0
name:            base64
version:         1.0
synopsis:        A modern Base64 library
description:
  A performant, featureful RFC 4648 and 7049-compliant Base64 implementation

homepage:        https://github.com/emilypi/base64
bug-reports:     https://github.com/emilypi/base64/issues
license:         BSD3
license-file:    LICENSE
author:          Emily Pillmore
maintainer:      Emily Pillmore <emilypi@cohomolo.gy>
               , Sofia-m-a <https://github.com/sofia-m-a>
copyright:       (c) 2019-2023 Emily Pillmore
category:        Data
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md
  MIGRATION-1.0.md

tested-with:     GHC ==8.10.7 || ==9.0.2 || ==9.2.5 || ==9.4.7 || ==9.6.3 || ==9.8.1

source-repository head
  type:     git
  location: https://github.com/emilypi/base64.git

library
  exposed-modules:
    Data.Base64.Types
    Data.ByteString.Base64
    Data.ByteString.Base64.URL
    Data.ByteString.Lazy.Base64
    Data.ByteString.Lazy.Base64.URL
    Data.ByteString.Short.Base64
    Data.ByteString.Short.Base64.URL
    Data.Text.Encoding.Base64
    Data.Text.Encoding.Base64.Error
    Data.Text.Encoding.Base64.URL
    Data.Text.Lazy.Encoding.Base64
    Data.Text.Lazy.Encoding.Base64.URL
    Data.Text.Short.Encoding.Base64
    Data.Text.Short.Encoding.Base64.URL

  other-modules:
    Data.Base64.Types.Internal
    Data.ByteString.Base64.Internal
    Data.ByteString.Base64.Internal.Head
    Data.ByteString.Base64.Internal.Tables
    Data.ByteString.Base64.Internal.Tail
    Data.ByteString.Base64.Internal.Utils
    Data.ByteString.Base64.Internal.W16.Loop
    Data.ByteString.Base64.Internal.W64.Loop

  build-depends:
      base           >=4.14     && <4.20
    , bytestring     >=0.11     && <0.13
    , deepseq        >=1.4.4.0  && <1.6
    , text           >=2.0      && <2.3
    , text-short     ^>=0.1

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite base64-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  other-modules:    Internal
  main-is:          Main.hs
  build-depends:
      base               >=4.14 && <4.20
    , base64
    , base64-bytestring
    , bytestring         >=0.11
    , QuickCheck
    , random-bytestring
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text               >=2.0
    , text-short

  ghc-options:      -Wall -threaded -with-rtsopts=-N

benchmark bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  main-is:          Base64Bench.hs
  build-depends:
      base               >=4.14 && <4.20
    , base64
    , base64-bytestring
    , bytestring         >=0.11
    , criterion
    , deepseq
    , random-bytestring
    , text               >=2.0

  ghc-options:      -Wall -rtsopts
